# chain-socket

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/macros/: AutoCollect.cmake
code/: BlockQueue.h  Buffer.cpp  Buffer.h  EpollPoller.cpp  EpollPoller.h  IOCPPoller.cpp  IOCPPoller.h  KqueuePoller.h  Log.cpp  Log.h  Main.cpp  NetPoller.cpp  NetPoller.h  NetStruct.h  Poller.cpp  Poller.h  PollerForward.h  Queue.h  SelectPoller.cpp  SelectPoller.h  Spider.cpp  Spider.h  SystemInterface.hpp  SystemReader.h  WebSocketPoller.hpp  catch.hpp  socketInfo.h  test_case.cpp  websocket.cpp  websocket.h
code/ChainSocket/: BlockQueue.h  Buffer.cpp  Buffer.h  IOCPPoller.cpp  IOCPPoller.h  Ip.cpp  Ip.h  KqueuePoller.cpp  MsgHub.cpp  MsgHub.h  NetStruct.h  NormalPoller.hpp  Poller.cpp  Poller.h  PrivateHeaders.h  Queue.h  SelectPoller.cpp  SelectPoller.h  SystemInterface.hpp  Timer.cpp  Timer.h  catch.hpp  chain-socket.h  frame.hpp  xmalloc.cpp  xmalloc.h
code/chain-net/: Buffer.h  EpollPoller.cpp  EpollPoller.h  IOCPPoller.cpp  IOCPPoller.h  KqueuePoller.cpp  KqueuePoller.h  NetStruct.h  Poller.h  PrivateHeaders.h  SelectPoller.cpp  SelectPoller.h  SystemInterface.h  SystemReader.h  Timer.cpp  Timer.h
code/example/Echo/: echo.hpp  main.cpp
code/example/wsserver/: WebSocketPoller.hpp  main.cpp  websocket.h
